// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support Component render tests should render just the icon by default 1`] = `
<Portal
  containerId="support-portal"
>
  <div
    className="Support"
  >
    <Popover
      bottom={true}
      className="Popover"
      fixed={true}
      left={true}
      open={false}
      right={true}
      top={true}
      trigger={
        <a
          className="Button"
          onClick={[Function]}
        >
          <Help
            className="Icon"
            size={33}
          />
        </a>
      }
    />
  </div>
</Portal>
`;

exports[`Support Component render tests should show form and close icon when panel is opened and form is toggled 1`] = `
<Portal
  containerId="support-portal"
>
  <div
    className="Support"
  >
    <Popover
      bottom={true}
      className="Popover"
      fixed={true}
      left={true}
      open={true}
      right={true}
      top={true}
      trigger={
        <a
          className="Button"
          onClick={[Function]}
        >
          <Cancel
            className="Icon"
            size={33}
          />
        </a>
      }
    >
      <Connect(ReduxForm)
        onCancel={[Function]}
        onContinue={[Function]}
      />
    </Popover>
  </div>
</Portal>
`;

exports[`Support Component render tests should show search panel and close icon when panel is opened 1`] = `
<Portal
  containerId="support-portal"
>
  <div
    className="Support"
  >
    <Popover
      bottom={true}
      className="Popover"
      fixed={true}
      left={true}
      open={true}
      right={true}
      top={true}
      trigger={
        <a
          className="Button"
          onClick={[Function]}
        >
          <Cancel
            className="Icon"
            size={33}
          />
        </a>
      }
    >
      <SearchPanel
        toggleForm={[Function]}
      />
    </Popover>
  </div>
</Portal>
`;
